# pm

./: .dockerignore  Dockerfile  docker-compose.yml
backend/: AGENTS.md  pyproject.toml
backend/app/: main.py
backend/tests/: test_app.py
docs/: PLAN.md
frontend/: AGENTS.md  playwright.config.ts
frontend/src/components/: HomeShell.test.tsx  HomeShell.tsx  KanbanBoard.tsx
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
