[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
